File Upload added in extension

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <h3>Ransomware Detection</h3>
+  <input type="file" id="fileInput" />
+  <button id="scanBtn">Scan File</button>
   <div id="result">Scanning...</div>
   <script src="popup.js"></script>
 </body>
